# wiki-memory-bench

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-CN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  llm-smoke.yml
docs/: adapter-guide.md  architecture.md  basic-memory-adapter.md  ci-debug.md  dataset-guide.md  dataset-strategy.md  llm-evaluation.md  mvp-plan.md  non-goals.md  release-checklist.md  release-notes-v0.1-alpha.md  research-notes.md  resume.md  synthetic-wiki-memory.md  technical-report-outline.md
docs/internal/: ci-debug.md  mvp-plan.md  release-notes-v0.1-alpha.md
reports/: .llm_smoke_results.jsonl  .v0_1_alpha_results.jsonl  README.md  clipwiki-failure-analysis.md  llm-smoke-results.md  llm-smoke-run-ids.txt  public-benchmark-alpha.md  v0.1-alpha-results.md  v0.1-alpha-run-ids.txt
reports/historical/: public-benchmark-alpha-legacy.md
scripts/: reproduce_llm_smoke.sh  reproduce_v0_1_alpha.sh
src/wiki_memory_bench/: __init__.py  __main__.py  cli.py  schemas.py
tests/: __init__.py  locomo_fixture.py  longmemeval_fixture.py  test_basic_memory.py  test_bm25.py  test_citation_metrics.py  test_cli.py  test_clipwiki.py  test_datasets.py  test_exact.py  test_fairness_metadata.py  test_full_context.py  test_latency_semantics.py  test_llm.py  test_llm_smoke_script.py  test_locomo_mc10.py  test_longmemeval.py  test_multiple_choice.py  test_openrouter.py  test_release_readiness.py  test_release_script.py  test_runner_errors.py  test_schemas.py  test_synthetic_wiki_memory.py  test_vector_rag.py
(+37 files in other folders)
